--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </nav>
     </header>
     <main>
-        <h1>HTML</h1>
+        <h1>HTML Luciana Leaño Guerrero</h1>
     </main>
     <table>
         <thead>
